tooling/tree-sitter-axol/grammar.js
    source_file: $ => repeat(choice($._item, $._statement)),

    _item: $ => choice(
      $.struct_definition,
      $.enum_definition,
      $.interface_definition,
      $.const_assignment,
      $.type_alias,
      $.static_method_definition,
      $.method_definition,
      $.colon_method_definition,
      $.impl_declaration,
      $.cblock,
      $.cppblock,
      $.rblock,
      $.pyblock,
    ),

    // ==================================================================
    // Items
    // ==================================================================

    function_declaration: $ => choice(
      seq(
        repeat(choice('pub', 'async')),
        'fn',
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        field('parameters', $.parameters),
        optional($.return_type),
        optional(field('body', $.block)),
        'end',
      ),
      // `extern fn` declares a foreign function; it has no body.
      seq(
        optional('pub'),
        'extern',
        optional('async'),
        'fn',
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        field('parameters', $.parameters),
        optional($.return_type),
      ),
    ),

    parameters: $ => seq(
      '(',
      optional(seq(
        commaSep1($._parameter),
        optional(','),
      )),
      ')',
    ),

    _parameter: $ => choice(
      $.self_parameter,
      seq(
        field('name', choice(
          $.identifier,
          $.wildcard_pattern,
          $.tuple_pattern,
          $.record_pattern,
        )),
        optional(seq(':', field('type', $._type))),
        optional(seq('=', field('default', $._expression))),
      ),
    ),

    self_parameter: $ => seq('self', optional(seq(':', field('type', $._type)))),

    return_type: $ => prec.right(seq('->', choice(
      $._type,
      seq($._type, ',', commaSep1($._type)),
      seq($._type, '!', $._type),
    ))),

    struct_definition: $ => seq(
      field('name', $.identifier),
      '=',
      'struct',
      optional(field('type_parameters', $.type_parameters)),
      repeat(choice($.field_definition, ',')),
      'end',
    ),

    field_definition: $ => seq(
      optional('pub'),
      field('name', $.identifier),
      ':',
      field('type', $._type),
      optional(seq('=', field('default', $._expression))),
    ),

    enum_definition: $ => seq(
      field('name', $.identifier),
      '=',
      'enum',
      optional(field('type_parameters', $.type_parameters)),
      repeat(choice($.enum_variant, ',')),
      'end',
    ),

    enum_variant: $ => seq(
      field('name', $.identifier),
      optional(choice(
        seq(
          '(',
          optional(seq(commaSep1($._enum_variant_parameter), optional(','))),
          ')',
        ),
        seq('{', repeat(choice($.field_definition, ',')), '}'),
      )),
    ),

    _enum_variant_parameter: $ => choice(
      $._type,
      seq(field('name', $.identifier), ':', field('type', $._type)),
    ),

    interface_definition: $ => seq(
      field('name', $.identifier),
      '=',
      'interface',
      optional(field('type_parameters', $.type_parameters)),
      repeat(choice($.interface_method, ',')),
      'end',
    ),

    interface_method: $ => seq(
      optional('pub'),
      field('name', $.identifier),
      field('parameters', $.parameters),
      optional($.return_type),
      optional(choice(
        seq('=', field('default', $._expression)),
        seq('do', optional(field('body', $.block)), 'end'),
      )),
    ),

    const_declaration: $ => seq(
      optional('pub'),
      'const',
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
      '=',
      field('value', $._expression),
    ),

    // `Name = const value` shorthand.
    type_alias: $ => seq(
      optional('pub'),
      'type',
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      '=',
      field('value', choice($._type, $.record_type)),
    ),

    _statement: $ => choice(
      $.let_statement,
      $.var_statement,
      $.assignment_statement,
      $.expression_statement,
      $.while_statement,
      $.repeat_statement,
      $.for_statement,
      $.loop_statement,
      $.break_statement,
      $.continue_statement,
      $.return_statement,
      $.do_statement,
      $.unsafe_statement,
      $.function_declaration,
      $.const_declaration,
      $.use_declaration,
    ),

    // `prec.right`: when an `else` follows a `let` inside an `if` body, it
    // binds to the `let ... else` (let-else) rather than the `if ... else`.
    let_statement: $ => prec.right(seq(
      'let',
      field('pattern', $._pattern),
      optional(seq(':', field('type', $._type))),
      '=',
      field('value', $._expression),
      optional(seq('else', field('alternative', $._statement))),
    )),

    assignment_statement: $ => prec.right(PREC.ASSIGNMENT, seq(
      field('left', commaSep1($._expression)),
      field('operator', $._assignment_operator),
      field('right', commaSep1($._expression)),
    )),

    _assignment_operator: $ => choice(
      '=', '+=', '-=', '*=', '/=', '%=', '&=', '|=', '^=', '<<=', '>>=',
    ),

    expression_statement: $ => $._expression,

    block: $ => repeat1($._statement),

    // ==================================================================
    // Match expressions
    // ==================================================================

    _pattern: $ => choice(
      $.or_pattern,
      $.as_pattern,
      $._pattern_atom,
    ),

    _type: $ => choice(
      $.primitive_type,
      $.type_identifier,
      $.optional_type,
      $.array_type,
      $.generic_type,
      $.tuple_type,
      $.reference_type,
      $.pointer_type,
      $.borrow_type,
      $.mut_type,
      $.move_type,
    ),

    type_identifier: $ => alias($.identifier, 'type_identifier'),

    primitive_type: $ => choice(
      'Int', 'UInt', 'Float', 'Double', 'Bool', 'String', 'Char', 'Byte',
      'i8', 'i16', 'i32', 'i64', 'i128',
      'u8', 'u16', 'u32', 'u64', 'u128',
      'f32', 'f64', 'isize', 'usize', 'Self',
    ),

    optional_type: $ => prec.left(1, seq($._type, repeat1('?'))),

    array_type: $ => seq('[', field('element', $._type), ']'),

    generic_type: $ => seq(
      field('name', $.type_identifier),
      '<',
      commaSep1(field('type', $._type)),
      optional(','),
      '>',
    ),

    tuple_type: $ => prec(1, seq('(', $._type, ',', commaSep1($._type), optional(','), ')')),

    reference_type: $ => prec.right(2, seq('&', optional('mut'), $._type)),

    borrow_type: $ => prec.right(1, seq('borrow', $._type)),

    mut_type: $ => prec.right(1, seq('mut', $._type)),

    move_type: $ => prec.right(1, seq('move', $._type)),

    // ==================================================================
    // Expressions
    // ==================================================================

    _expression: $ => choice(
      $.binary_expression,
      $.unary_expression,
      $.await_expression,
      $.spawn_expression,
      $.as_expression,
      $.call_expression,
      $.colon_method_call_expression,
      $.field_expression,
      $.index_expression,
      $.try_expression,
      $.unwrap_expression,
      $.struct_expression,
      $.spread_expression,
      $.function_expression,
      $.short_closure,
      $.if_expression,
      $.match_expression,
      $.array_expression,
      $.record_expression,
      $.tuple_expression,
      $.parenthesized_expression,
      $.number,
      $.string,
      $.raw_string,
      $.char_literal,
      $.boolean,
      $.null,
      $.nil,
      $.scoped_identifier,
      $.identifier,
      $.self_expression,
    ),

    spawn_expression: $ => prec(PREC.UNARY, seq('spawn', field('value', $._expression))),

    call_expression: $ => prec.left(PREC.POSTFIX, seq(
      field('function', $._expression),
      field('arguments', $.arguments),
    )),

    arguments: $ => seq(
      '(',
      optional(seq(commaSep1($._argument), optional(','))),
      ')',
    ),

    _argument: $ => choice(
      $.named_argument,
      $._expression,
    ),

    field_expression: $ => prec.left(PREC.POSTFIX, seq(
      field('object', $._expression),
      '.',
      field('field', $.identifier),
    )),

    index_expression: $ => prec.left(PREC.POSTFIX, seq(
      field('object', $._expression),
      '[',
      field('index', $._expression),
      ']',
    )),

    try_expression: $ => prec.left(PREC.POSTFIX, seq(
      field('value', $._expression),
      '?',
    )),

    unwrap_expression: $ => prec.left(PREC.POSTFIX, seq(
      field('value', $._expression),
      '!',
    )),

    struct_expression: $ => prec.left(PREC.POSTFIX, seq(
      field('type', $._expression),
      '{',
      repeat(choice($._record_field, ',')),
      '}',
    )),

    _record_field: $ => choice(
      $.spread_expression,
      $.record_field,
    ),

    record_field: $ => prec(1, choice(
      seq(field('name', $.identifier), ':', field('value', $._expression)),
      seq(field('name', $.identifier), '=', field('value', $._expression)),
    )),

    number: $ => choice($.integer, $.float),

    integer: $ => choice(
      /[0-9][0-9_]*(_[A-Za-z][A-Za-z0-9_]*)?/,
      /0[xX][0-9a-fA-F_]+/,
      /0[bB][01_]+/,
      /0[oO][0-7_]+/,
    ),

    string: $ => seq(
      '"',
      repeat(choice(
        $.escape_sequence,
        $.string_interpolation,
        $._string_text_chunk,
        $._string_dollar,
      )),
      '"',
    ),

    _string_text_chunk: $ => token(prec(1, /[^"\\$]+/)),

    _string_dollar: $ => /\$/,

    identifier: $ => /[A-Za-z_][A-Za-z0-9_]*/,
  },
});
